--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
             <h1>Best IT Institute in Pakistan – Unlock Your Tech Future</h1>
             <p>In the rapidly evolving world of technology, choosing the best IT institute in Pakistan can be a game-changer for your career. With digital transformation sweeping across industries, skilled IT professionals are in high demand. Whether you're aiming to become a software engineer, web developer, cybersecurity expert, or data analyst, the right institute can set the foundation for a successful tech journey. Technology is the future, and Pakistan’s youth must be well-prepared to seize the opportunities it offers.</p>
 <!-- Banner Image -->
-            <img src="C:\Users\hp\Desktop\it Institute\itinstitute.jpg" alt="Best IT Institute in Pakistan" class="banner-image">
+            <img src="bestitinstitute/itinstitute.jpg" alt="Best IT Institute in Pakistan" class="banner-image">
 
             <h2>Why Choosing the Right IT Institute Matters</h2>
             <p>The quality of training, industry exposure, practical skills, and certification opportunities significantly impact your career growth. In today's digital age, technological expertise is not just a skill; it is a powerful tool for success in virtually every field, from business to healthcare to finance. Top IT institutes are equipped with industry-standard tools and technologies, which provide students with a competitive edge. These institutes offer more than theoretical knowledge—they focus on practical skills, hands-on training, and real-world projects. Therefore, enrolling in the right institute becomes crucial in ensuring you have the technical acumen required for success in the global job market.</p>
